changed favicon and logo

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary: #00B074;
+$primary: #6d962c;
 $secondary: #2B9BFF;
 $light: #EFFDF5;
 $dark: #2B3940;
